# chemistru-elements

./: Cargo.toml  README.md
src/: element.rs  inner.rs  ion.rs  lib.rs  ops.rs  raw.rs
src/data/: atomic.rs  mod.rs  state.rs
src/data/electron/: configuration.rs  mod.rs  orbital.rs
