[package]
name = "chemistru-elements"
readme = "README.md"
description = "Basic Elemental Representation"

homepage = "https://github.com/Ross-Morgan/chemistru-elements"
repository = "https://github.com/Ross-Morgan/chemistru-elements"

version = "0.3.0"
edition = "2021"

license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
phf = "0.11.2"
proc-macro2 = "1.0.69"
quote = "1.0.33"
serde = { version = "1.0.188", features = ["derive"] }
staticvec = "0.11.9"
